# savannah-orders

./: .gitignore  README.md  mypy.ini  pyproject.toml
.github/workflows/: ci.yml
docs/: database-design.md  high-level-architecture.md
src/: pytest.ini
src/app/: main.py
src/app/api/auth/: oidc.py
src/app/api/db/: init.py  session.py
src/app/api/models/: base_model.py  customer.py  order.py  orders.py
src/app/api/routes/: auth.py  customer.py  customers.py  health.py  order.py
src/app/api/schemas/: customer.py  order.py  token.py  user.py
src/app/api/services/: customer_service.py  order_service.py  sms_service.py
src/app/api/utils/: code_generator.py  common.py  customer.py  customer_utils.py  error_handler.py  order.py
src/app/settings/: config.py  logging.py
src/app/settings/sms/: init.py
src/resources/: development.ini
src/tests/: run_tests.py  test_users.py
src/tests/unit/: test_customer_service.py  test_customers.py  test_order_service.py  test_sms_service.py
